--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 markdown: kramdown
 url: www.parulbhargava.com
-theme: jekyll-theme-slate
+theme: jekyll-theme-merlot
 title: Getting to Think
+show_downloads: false
+description: To inspire and accept people, enabling them to be their authentic selves
